Bug 1059187 - Set Undefined/Null in else branch of filtering. r=h4writer.